@@ -1,3 +1,9 @@
+2012-06-05 -- Prerelease (thekraken-0.7-pre14)
+-- support FahCore_a4
+-- V7: unblock appropriate signals so dlbload
+   can be stopped properly
+
+
 2012-06-03 -- Prerelease (thekraken-0.7-pre13)
 -- detect logfile fd with greater deal of flexibility
    to accommodate V7 client
